--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello World Test</h1>
+<div>
+    <img src="/ImageTest/dummy1.jpg" alt="Image Test">
+</div>
 </body>
 </html>
