--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello World Test</h1>
 <div>
-    <img src="/ImageTest/dummy1.jpg" alt="Image Test">
+    <img src="ImageTest/dummy1.jpg" alt="Image Test">
 </div>
 </body>
 </html>
