--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div>
-    <img src="Images/dummy profile.jpg" alt="Image Test" width="100" height="100">
+    <img src="Images/dummy_flag.png" alt="Image Test" width="100" height="100">
 </div>
 </body>
 </html>
